--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     var closeStr = 'Inchide';    var static_url = '';
     var supermarketMessages =
     {
-        'qty_chars':'Cantitatea introdusÄtrebuie<br />sÄconÈÄcaractere de la 0 la 9',
-        'qty_max':'Cantitatea maximÄeste',
-        'qty_min':'Cantitatea minimÄeste',
-        'qty_between':'Cantitatea introdusÄtrebuie<br />sÄfie între',
-        'qty_incorrect':'Cantitatea aleasÄde tine nu poate fi comandatÄ<br />Pentru o alegere corectÄa cantitÄi<br />te rugÄ sÄfoloseÈi butoanele "-" sau "+"',
-        'qty_predefined':'Cantitatea introdusÄtrebuie sÄfie una din valorile:<br />',
-        'qty_and':'È',
-        'added_success':'Produsele au fost<br />adÄgate în coÈ,
+        'qty_chars':'Cantitatea introdusă trebuie<br />să conțină caractere de la 0 la 9',
+        'qty_max':'Cantitatea maximă este',
+        'qty_min':'Cantitatea minimă este',
+        'qty_between':'Cantitatea introdusă trebuie<br />să fie între',
+        'qty_incorrect':'Cantitatea aleasă de tine nu poate fi comandată.<br />Pentru o alegere corectă a cantității<br />te rugăm să folosești butoanele "-" sau "+"',
+        'qty_predefined':'Cantitatea introdusă trebuie să fie una din valorile:<br />',
+        'qty_and':'și',
+        'added_success':'Produsele au fost<br />adăugate în coș',
         'transport_active':'Livrare prin curier',
         'transport_inactive':'In curând in zona ta',
         'pickup_active':'Ridicare din magazin',
@@ -35,7 +35,7 @@
         "unspecified"          : "Nespecificat",
         "brand"                : "Brand",
         "content"              : "Conţinut",
-        "searchTerm"           : "Termen cÄtat",
+        "searchTerm"           : "Termen căutat",
         "inCategory"           : "în",
         "relevantProducts"     : "produse relevante",
         "relevantSuggestions"  : "cuvinte/categorii relevante",
