--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
 
-    <script type="text/ng-template" id="pages/blog.html">
+    <script type="text/ng-template" id="pages/product-page.html">
       <h1>Blog</h1>
       <h3>{{message}}</h3>
     </script>
@@ -58,7 +58,7 @@
     </script>
 
     <a href="#/">Home</a>
-    <a href="#/blog">Blog</a>
+    <a href="#/product">Product</a>
     <a href="#/about">About</a>
 
     <div ng-view></div>
