--- a/pages/index.html
+++ b/pages/index.html
@@ -2444,14 +2444,12 @@
                         <figure class="emg-new-carousel-figure emg-carousel-live-prod"
                                 id="38bc9e56c3c3c89ff79c1b354eff0f81" style="width: 184.8px;">
                             <a data-ref="hp_prod_widget_live_asp__1"
-                               href="/pompa-de-san-electrica-tomme-tippe-5010415230188/pd/DTPGQBBBM/?ref=hp_prod_widget_live_asp_2_1">
+                               href="#/product/DTPGQBBBM">
                                 <img src="https://s0emagst.akamaized.net/products/744/743232/images/res_a1bfbf9529385f728a3af456ab1de1d9_150x150_73pe.jpg">
                             </a>
                             <div class="emg-carousel-separator"></div>
                             <figcaption>
-                                <p><a data-ref="hp_prod_widget_live_asp__1 href="
-                                      pompa-de-san-electrica-tomme-tippe-5010415230188="" pd="" dtpgqbbbm=""
-                                      ?ref="hp_prod_widget_live_asp_2_1&quot;">Pompa de san electrica Tomme Tippe</a>
+                                <p><a data-ref="hp_prod_widget_live_asp__1" href="#/product/DTPGQBBBM">Pompa de san electrica Tomme Tippe</a>
                                 </p>
                                 <span class="widget_product_rating">
                                     <span class="product_rating">
@@ -2462,7 +2460,7 @@
                          </span>
                          <span class="review_count">
                              <span class="product_reviews">
-                                 (<a href="/pompa-de-san-electrica-tomme-tippe-5010415230188/pd/DTPGQBBBM/?ref=widget_prod#new_reviews">4 review-uri</a>)
+                                 (<a href="#/product/DTPGQBBBM">4 review-uri</a>)
                              </span>
                          </span>
                    </span>
@@ -2476,7 +2474,7 @@
                                 <span class="emg-carousel-price"><span class="money-int">388</span><sup
                                         class="money-decimal">00</sup> <span class="money-currency">Lei</span></span>
                                 <a data-ref="hp_prod_widget_live_asp__1"
-                                   href="/pompa-de-san-electrica-tomme-tippe-5010415230188/pd/DTPGQBBBM/?ref=hp_prod_widget_live_asp_2_1"
+                                   href="#/product/DTPGQBBBM"
                                    class="emg-button">
                                     <div class="emg-btn-icon"><span class="icon-i19-forward"></span></div>
                                     vezi detalii </a>
