--- a/pages/product-page.html
+++ b/pages/product-page.html
@@ -950,7 +950,7 @@
                                 </div>
 
                                 <h1 class="page-title">
-                                    {{message}}
+                                    {{pnk}}
                                 </h1>
                                 <div class="clearfix">
                                     <span class="product-code-display pull-left">Cod produs: 8690570518276</span>
