--- a/pages/product-page.html
+++ b/pages/product-page.html
@@ -343,7 +343,7 @@
                         <button class="btn btn-info main-megamenu-trigger" data-trigger="both"
                                 title="Trigger happiness"><i class="em em-burger"></i></button>
                     </div>
-                    <a class="navbar-brand" href="/" title="Welcome to eMAG">
+                    <a class="navbar-brand" href="/#/" title="Welcome to eMAG">
                         <img src="https://s0emagst.akamaized.net/assets/ro/css/icons/logo.svg" alt="Brand">
                     </a>
                 </div>
@@ -950,7 +950,7 @@
                                 </div>
 
                                 <h1 class="page-title">
-                                    {{pnk}}
+                                    {{data.product_title}}
                                 </h1>
                                 <div class="clearfix">
                                     <span class="product-code-display pull-left">Cod produs: 8690570518276</span>
