--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
 
+<script src="http://cdn.peerjs.com/0.3/peer.js"></script>
+<script src="rtc-service.js"></script>
+
 <script type="text/javascript">
 var strCancel = 'Anuleaza';    var changeStr = 'modifica';    var compareMsg = new Array('Poti compara maxim 4 produse!', 'Va rugam sa selectati cel putin 2 produse');
 var closeStr = 'Inchide';    var static_url = '';
