--- a/pages/product-page.html
+++ b/pages/product-page.html
@@ -950,7 +950,7 @@
                                 </div>
 
                                 <h1 class="page-title">
-                                    {{data.product_title}}
+                                    {{description.product_title}}
                                 </h1>
                                 <div class="clearfix">
                                     <span class="product-code-display pull-left">Cod produs: 8690570518276</span>
@@ -1163,7 +1163,7 @@
                                                             45<sup>99</sup> <span>Lei</span>
                                                         </p>
 
-                                                        <span class="label label-in_stock">În stoc</span>
+                                                        <span class="label label-in_stock">{{ availability.label }}</span>
                                                     </div>
 
 
