--- a/index.html
+++ b/index.html
@@ -19,48 +19,15 @@
 </script>
 
 <script type="text/javascript">
-var strCancel = 'Anuleaza';    var changeStr = 'modifica';    var compareMsg = new Array('Poti compara maxim 4 produse!', 'Va rugam sa selectati cel putin 2 produse');
-var closeStr = 'Inchide';    var static_url = '';
-var supermarketMessages =
-{
-    'qty_chars':'Cantitatea introdusă trebuie<br />să conțină caractere de la 0 la 9',
-    'qty_max':'Cantitatea maximă este',
-    'qty_min':'Cantitatea minimă este',
-    'qty_between':'Cantitatea introdusă trebuie<br />să fie între',
-    'qty_incorrect':'Cantitatea aleasă de tine nu poate fi comandată.<br />Pentru o alegere corectă a cantității<br />te rugăm să folosești butoanele "-" sau "+"',
-    'qty_predefined':'Cantitatea introdusă trebuie să fie una din valorile:<br />',
-    'qty_and':'și',
-    'added_success':'Produsele au fost<br />adăugate în coș',
-    'transport_active':'Livrare prin curier',
-    'transport_inactive':'In curând in zona ta',
-    'pickup_active':'Ridicare din magazin',
-    'pickup_inactive':'Indisponibil'
-};
-var EmgAddressUrl = "https://www.emag.ro/user/ajax/editAddressForm";
 
-// config vars for autocomplete
-var translation_config = {
-    "brand.headline"       : "Sugestii brand",
-    "searchTerm.headline"  : "Alţi termeni sugeraţi",
-    "productName.headline" : "Sugestii produse",
-    "category.headline"    : "Categorii sugerate",
-    "category"             : "Categorie",
-    "productName"          : "Produs",
-    "unspecified"          : "Nespecificat",
-    "brand"                : "Brand",
-    "content"              : "Conţinut",
-    "searchTerm"           : "Termen căutat",
-    "inCategory"           : "în",
-    "relevantProducts"     : "produse relevante",
-    "relevantSuggestions"  : "cuvinte/categorii relevante",
-    "numberOfProducts"     : "rezultate"
-};
 </script>
 
-<script type="text/javascript" src="./index_files/homepage.js"></script>
-<script type="text/javascript" src="./index_files/custom-select.js"></script>
+
+<script src="index_files/homepage.js"></script>
+<script src="index_files/custom-select.js"></script>
+
 </head>
-<body>
+<body style="position:absolute;left:-99999px;">
     <div ng-view></div>
 
     <script src="app.js"></script>
