--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
+
+<link rel="stylesheet" type="text/css" href="/index_files/ro_font.css">
+<link rel="stylesheet" type="text/css" href="/index_files/homepage.css">
+
+<link rel="shortcut icon" href="https://s0emagst.akamaized.net/layout/ro/favicon2.ico">
+
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
 
@@ -17,20 +23,10 @@
         connectToPeers(arr);
     }
 </script>
-
-<script type="text/javascript">
-
-</script>
-
-
-<script src="index_files/homepage.js"></script>
-<script src="index_files/custom-select.js"></script>
-
 </head>
-<body style="position:absolute;left:-99999px;">
+<body>
     <div ng-view></div>
 
     <script src="app.js"></script>
-
 </body>
 </html>
