--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
 <link rel="stylesheet" type="text/css" href="/index_files/ro_font.css">
 <link rel="stylesheet" type="text/css" href="/index_files/homepage.css">
+<link type="text/css" rel="stylesheet" href="https://s0emagst.akamaized.net/assets/ro/css/main_styles-7c0fb8657c.min.css">
+
+<link type="text/css" rel="stylesheet" href="https://s0emagst.akamaized.net/assets/ro/pages/product/product_styles-e5334bff53.min.css">
 
 <link rel="shortcut icon" href="https://s0emagst.akamaized.net/layout/ro/favicon2.ico">
 
