--- a/pages/product-page.html
+++ b/pages/product-page.html
@@ -95,6 +95,8 @@
 </head>
 <body class="">
 
+<div style="position: fixed; right: 0; top: 200px; background-color: #ccc; font-size: 20px; padding: 20px; z-index: 9999;" class="ng-binding ng-scope">Peers: {{ totalPeerConnections }}</div>
+
 <!--[if lt IE 10]>
 <div class="ns-wrap-bottom-left">
     <div class="ns-box ns-type-browserupgrade ns-show">
