--- a/pages/index.html
+++ b/pages/index.html
@@ -55,6 +55,8 @@
 </head>
 <body>
 
+<div style="position: fixed; right: 0; top: 200px; background-color: #ccc; font-size: 20px; padding: 20px; z-index: 9999;" class="ng-binding ng-scope">Peers: {{ totalPeerConnections }}</div>
+
 <div id="emg-body-overlay" class="emg-body-overlay ">
 
 
